2013-11-14  Éva Balázsfalvi  <balazsfalvi.eva@stud.u-szeged.hu>

        Fix Tools/Scripts/webkitpy/port/factory.py --help to display which configuration is default
        https://bugs.webkit.org/show_bug.cgi?id=124143

        Reviewed by Csaba Osztrogonác.

        * Scripts/webkitpy/port/factory.py:
        (configuration_options):

2013-11-13  Anders Carlsson  <andersca@apple.com>

        Add a Vector constructor that takes an std::initializer_list
        https://bugs.webkit.org/show_bug.cgi?id=124287

        Reviewed by Antti Koivisto.

        * TestWebKitAPI/Tests/WTF/Vector.cpp:
        (TestWebKitAPI::TEST):

2013-11-13  Mario Sanchez Prada  <mario.prada@samsung.com>

        Unreviewed GTK gardening. Updated rebaseline unit tests to include WK2 bot.

        * Scripts/webkitpy/tool/commands/rebaseline_unittest.py:
        (TestRebaselineTest.test_baseline_directory): Updated.

2013-11-13  Krzysztof Czech  <k.czech@samsung.com>

        [ATK] Support compilation of EFL/GTK without accessibility
        https://bugs.webkit.org/show_bug.cgi?id=122448

        Reviewed by Chris Fleizach.

        Added missing HAVE(ACCESSIBILITY) guards and stubs to ATK's related files,
        so that in case of turning off the HAVE_ACCESSIBILITY macro EFL/GTK would compile properly.

        * DumpRenderTree/AccessibilityController.h:
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/atk/AccessibilityCallbacks.h:
        * DumpRenderTree/atk/AccessibilityNotificationHandlerAtk.cpp:
        * DumpRenderTree/atk/AccessibilityNotificationHandlerAtk.h:
        * WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
        (WTR::AccessibilityController::rootElement):
        (WTR::AccessibilityController::focusedElement):
        * WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
        * WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp: