@@ -1,5 +1,15 @@
 2013-11-14  Éva Balázsfalvi  <balazsfalvi.eva@stud.u-szeged.hu>
 
+        run-perf-tests should warn loudly if you're using a Debug build.
+        https://bugs.webkit.org/show_bug.cgi?id=105236
+
+        Reviewed by Csaba Osztrogonác.
+
+        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
+        (PerfTestsRunner.run):
+
+2013-11-14  Éva Balázsfalvi  <balazsfalvi.eva@stud.u-szeged.hu>
+
         Fix Tools/Scripts/webkitpy/port/factory.py --help to display which configuration is default
         https://bugs.webkit.org/show_bug.cgi?id=124143
 
